installer: uses the new YAML actions in install4j 13.1 and add an installer test